--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-numpy==1.21.2
-tensorflow==0.12.0
+pandas
 Flask==2.0.1
-pandas==1.3.2
+tensorflow
+numpy==1.21.2
+phunspell==0.1.4
 tensorflow_datasets==4.7.0
+Unidecode==1.3.6
